# icm42688-test

./: CMakeLists.txt  LICENSE  README.md  main.cpp  rusty.h
rusty/: Cargo.toml  build.rs  cbindgen.toml  wrapper.h
rusty/src/: error.rs  gpio.rs  i2c.rs  lib.rs
rusty/src/icm/: config.rs  error.rs  mod.rs  register.rs
rusty/src/spi/: defines.rs  mod.rs
rusty/src/std/: allocator.rs  ffi.rs  mod.rs  panic_handler.rs  print.rs  thread.rs  time.rs
scripts/: build-debug.ps1  build-release.ps1  build.ps1
