[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusty"
crate-type = ["staticlib"]
bench = false
test = false

[profile.release.build-override]
opt-level = 3

[build-dependencies]
bindgen = "0.69.4"
cbindgen = { version = "0.26.0", default-features = false }

[dependencies]
accelerometer = "0.12.0"
cortex-m = "0.7.7"
custom-print = { version = "1.0.0", default-features = false, features = [
  "alloc",
] }
